--- a/associate_market_basket.ipynb
+++ b/associate_market_basket.ipynb
@@ -43,8 +43,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/opt/anaconda3/lib/python3.8/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
-      "  and should_run_async(code)\n"
+      "/Users"
      ]
     }
    ],
